Added the process button

--- a/index.html
+++ b/index.html
@@ -21,20 +21,28 @@
       <section class="date_input_section"> 
         <section class='date_input_section_elem'>
           <label> DAY </label>
-          <input type='text' placeholder="DD" />
+          <input type='text' placeholder="DD" class='input_e' />
           <p class='message'> </p>
 
         </section>
         <section class='date_input_section_elem'>
           <label> MONTH </label>
-          <input type='text' placeholder="MM" />
+          <input type='text' placeholder="MM"  class='input_e'/>
           <p class='message'> </p>
         </section>
         <section class='date_input_section_elem'>
           <label> YEAR</label>
-          <input type='text' placeholder="YYYY" />
+          <input type='text' placeholder="YYYY" class='input_e'/>
           <p class='message'> </p>
         </section>
+      </section>
+
+      <!-- Processing stage -->
+      <section id='process_section'>
+        <div id='process_section_random_div'> </div>
+        <div id='process_section_button'> 
+          <svg xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44"><g fill="none" stroke="#FFF" stroke-width="2"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg>
+        </div> 
       </section>
 
     </main>
@@ -55,5 +63,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Prince Kofi Asiedu</a>.
   </div>
+
+  <script src='./assets/js/main.js'> </script>
+  <script src='./assets/js/main.js'> </script>
 </body>
 </html>
