Added the UI for the display

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
         </div> 
       </section>
 
+       <!-- Display section-->
+       <section id='display_section'> 
+        <p class='display_section_elem'> <b> -- </b> years </p>
+        <p class='display_section_elem'> <b> -- </b> months </p>
+        <p class='display_section_elem'> <b> -- </b> days </p>
+      </section>
+
      
 
     </main>
