Added date display

--- a/index.html
+++ b/index.html
@@ -47,18 +47,14 @@
 
        <!-- Display section-->
        <section id='display_section'> 
-        <p class='display_section_elem'> <b> -- </b> years </p>
-        <p class='display_section_elem'> <b> -- </b> months </p>
-        <p class='display_section_elem'> <b> -- </b> days </p>
+        <p class='display_section_elem'> <b class='n'> -- </b> years </p>
+        <p class='display_section_elem'> <b class='n'> -- </b> months </p>
+        <p class='display_section_elem'> <b class='n'> -- </b> days </p>
       </section>
 
      
 
     </main>
-     
-  -- years
-  -- months
-  -- days
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
