Changed algorithm for year and month calculation

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     Coded by <a href="#">Prince Kofi Asiedu</a>.
   </div>
 
+  <script src='./assets/js/utils.js'> </script>
   <script src='./assets/js/main.js'> </script>
   
 </body>
