Included number display animation

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <script src='./assets/js/utils.js'> </script>
   <script src='./assets/js/updateDisplay.js'> </script>
   <script src='./assets/js/verifications.js'> </script>
+  <script src='./assets/js/animate.js'> </script>
   <script src='./assets/js/main.js'> </script>
   
 </body>
