style: added margin to attribution

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
   
   <title>Frontend Mentor | Age calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { font-size: 11px; text-align: center; margin-top: 20px; }
+    .attribution a { color: #FFC107; }
   </style>
 </head>
 <body>
     <main>
-      <!-- Date input segement-->
+      <!-- Date input segment-->
       <section class="date_input_section"> 
         <section class='date_input_section_elem'>
           <label> DAY </label>
