--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Prince Kofi Asiedu</a>.
+    Code by <a href="https://linkedin.com/in/princek-asiedu/" target="_blank">Prince Kofi Asiedu</a>
   </div>
   <script src='./assets/js/utils.js'> </script>
   <script src='./assets/js/updateDisplay.js'> </script>
