seo: Changed Project title and Included description tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon.ico">
   <link rel='stylesheet' href="./assets/css/main.css" >
   
-  <title>Frontend Mentor | Age calculator app</title>
+  <title>My Age Calculator App</title>
+  <meta name="description" content="Check how exactly how old you are with MyAge Calculator. Age calculator tool made by Prince Kofi Asiedu" />
 
   <style>
     .attribution { font-size: 11px; text-align: center; margin-top: 20px; }
